style.css
body {
    margin: 0;
    padding: 0;
    background-color: #eee;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

/* header */
.title {
    color: #102a42;
    text-transform: capitalize;
    margin: 1rem;
    padding: 1rem;
    text-align: center;
}
h1 {
    font-size: 1.8rem;
    letter-spacing: 2px;
}
.text-title {
    font-size: .97rem;
    color: #555;
    padding: 0 1rem;
    letter-spacing: 0.5px;
    margin-bottom: 2rem;
}

/* artical center */
.about-center {
    width: 90%;
    margin: 0 auto;
}
/* image container */
.pic {
    display: block;
    box-shadow: 1px 1px 3px gray;
    width: 100%;
    background-size: cover;
    border-radius: 8px;
    object-fit: cover;
}
img {
    display: block;
    width: 100%;
    object-fit: fill;
    border-radius: 8px;
    transition: all .3s ease-in-out;  
}
img:hover{
    cursor: pointer;
    opacity: 0.90;
   transform: translateY(-1px);
}

/* button container */

.btn-container {
    text-align: center;
    background-color: rgba(127, 255, 212, 0.966);
    width: 100%;
    display: flex;
    border-top-right-radius: 8px;
    border-top-left-radius: 8px;
    padding:0;
    margin: 1rem 0 0 0;
    box-sizing: border-box;
}
.tab-btn {
    width: 33.33%;
    margin:0 ;
    background-color: aquamarine;
    font-weight: bold;
    letter-spacing: 2px;
    color: #102a42;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    text-transform: uppercase;
    padding: 1rem 3rem;
    border: none;
    cursor: pointer;
}
/* btn right left radius */
.btn-l {
    border-top-right-radius: 8px;
}
.btn-r {
    border-top-left-radius: 8px;
}
/* hover effect */
.tab-btn:hover {
    background-color: #2edba7;
    color:azure;
}

/* about content */
.about-content {
    padding: 1rem;
}
h4 {
    color:#102a42;
    letter-spacing: 2px;
    text-transform: capitalize;
}
/* content hide default */
.content {
    color: #555;
    display: none;
}

/* show content */
.active {
    display: block;
}

/* footer */
footer {
    margin-top: 5rem;
    background-color: #102a42 ;
    text-align: center;
    text-transform: capitalize;
    height: 15vh;
    display: flex;
    justify-content: center;
    align-items: center;
}
.footer-center {
    color: #999;
}

/* media query 768px */
@media screen and (min-width: 768px){

    .title {
        width: 80%;
        margin: 0 auto;
    }
    h1 {
        font-size: 2rem;
    }

    .about-center {
        width:80%;
        margin: 0 auto;
    }

}

/* media query 1000px */
@media screen and (min-width: 1000px){

    .about-center {
        display: flex;
        width: 90%;
        padding: 0 1rem;
        height: 50vh;
    }
    .pic {
        margin-top: 1rem;
        padding: 0rem;
        width: 410px;
        margin: 1rem auto;
    }
    img {
        width: 100%;
        height: 260px;
    }

    .about {
        width: 48%;
        margin: 0 auto;
    }
    .footer-center {
        letter-spacing: 1px;
    }
}

/* media at 1200px */
@media screen and (min-width: 1150px){

    .title {
        width: 960px;
    }
    .text-title {
        padding: 0 8rem;
    }

    .about-center {
        width: 964px;
        margin: 0 auto;
    }
    .about {
        width: 450px;
        margin: 0 auto;
    }

}

